--- a/CryptocurrenciesCollector.Resources/Language.Uk.resx
+++ b/CryptocurrenciesCollector.Resources/Language.Uk.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Candlestick" xml:space="preserve">
+    <value>Японська свічкова діаграма</value>
+  </data>
   <data name="ChangeHeader" xml:space="preserve">
     <value>Зміни ціни (24год.%) </value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="DarkTheme" xml:space="preserve">
     <value>Темна</value>
+  </data>
+  <data name="Date" xml:space="preserve">
+    <value>Дата</value>
   </data>
   <data name="DetailInformationHeader" xml:space="preserve">
     <value>Детальна інформація</value>
